# CS_3140_Project

./: CMakeLists.txt  README.md  TESTING.md
src/: main.cpp
src/data/: nutrition.csv
src/entities/: CalorieTracker.cpp  CalorieTracker.h  DailyLog.cpp  DailyLog.h  Exceptions.h  FoodItem.cpp  FoodItem.h  Goal.cpp  Goal.h  IdGenerator.h  MealEntry.cpp  MealEntry.h  Notification.h  NutritionInfo.h  RegularUser.cpp  RegularUser.h  User.cpp  User.h
src/repositories/: IMealRepository.h  INutritionRepository.h  IUserRepository.h  InMemoryMealRepository.cpp  InMemoryMealRepository.h  LocalNutritionRepository.cpp  LocalNutritionRepository.h  UserRepository.cpp  UserRepository.h
src/services/: MealService.cpp  MealService.h  UserService.cpp  UserService.h
test/: my_test.cpp
